add kgateway label to control plane pod
Signed-off-by: Bernie Birnbaum <bewebi@earthlink.net>

--- a/internal/kgateway/helm/kgateway/templates/gateway/proxy-deployment.yaml
+++ b/internal/kgateway/helm/kgateway/templates/gateway/proxy-deployment.yaml
@@ -31,6 +31,7 @@ spec:
       {{- end }}
       {{- end}}
       labels:
+        {{- include "kgateway.gateway.constLabels" . | nindent 8 }}
         {{- include "kgateway.gateway.selectorLabels" . | nindent 8 }}
         {{- with $gateway.extraPodLabels }}
         {{- toYaml . | nindent 8 }}
